--- a/css/main.css
+++ b/css/main.css
@@ -323,46 +323,85 @@ img {
 
 .hero {
   text-align: center;
-  padding-top: 200px;
-  padding-bottom: 200px;
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero-logo.jpg");
 }
+.hero .container {
+  padding-top: 118px;
+  padding-bottom: 118px;
+}
+@media screen and (min-width: 768px) {
+  .hero {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero-logo.jpg");
+  }
+  .hero .container {
+    padding-right: 200px;
+    padding-left: 200px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero {
+    text-align: center;
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero-logo.jpg");
+  }
+  .hero .container {
+    padding-top: 200px;
+    padding-bottom: 200px;
+  }
+}
 .hero__title {
-  max-width: 696px;
-  margin: 0 auto;
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
+  font-size: 26px;
+  line-height: 1.62;
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   margin-bottom: 30px;
   color: #ffffff;
 }
+@media screen and (min-width: 1200px) {
+  .hero__title {
+    font-size: 44px;
+    line-height: 1.36;
+  }
+}
 .hero__button {
-  font-family: "Roboto";
   font-weight: 700;
   font-size: 16px;
   line-height: 1.88;
+  display: flex;
+  align-items: center;
+  margin: 0 auto;
   letter-spacing: 0.06em;
   border: none;
   border-radius: 4px;
   background-color: #2196f3;
   color: #f5f4fa;
-  padding: 10px 32px;
+  padding: 10px 24px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   cursor: pointer;
+}
+@media screen and (min-width: 1200px) {
+  .hero__button {
+    padding: 10px 32px;
+  }
 }
 .hero__button:hover, .hero__button:focus {
   background-color: #2196f3;
 }
 
 .benefits {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+@media screen and (min-width: 1200px) {
+  .benefits {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 .benefits__icon {
-  max-width: 270px;
+  max-width: 450px;
   height: 120px;
   display: flex;
   align-items: center;
@@ -371,24 +410,89 @@ img {
   background: #f5f4fa;
   border-radius: 4px;
 }
-.benefits__uptitle {
-  display: none;
+@media screen and (min-width: 768px) {
+  .benefits__icon {
+    max-width: 354px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
-.benefits__list {
-  display: flex;
+@media screen and (min-width: 1200px) {
+  .benefits__icon {
+    max-width: 270px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+}
+@media screen and (min-width: 768px) {
+  .benefits__list {
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
 .benefits__item {
-  max-width: 270px;
-  margin-right: 30px;
+  width: 100%;
 }
-.benefits__item:last-child {
+@media screen and (max-width: 767px) {
+  .benefits__item:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .benefits__item {
+    width: 354px;
+    margin-right: 30px;
+    margin-bottom: 30px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .benefits__item {
+    width: 270px;
+    margin-bottom: 0;
+  }
+}
+.benefits__item:nth-child(2n) {
   margin-right: 0;
+}
+@media screen and (min-width: 1200px) {
+  .benefits__item:nth-child(2n) {
+    margin-right: 30px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .benefits__item:last-child {
+    margin-bottom: 0;
+  }
+}
+@media screen and (min-width: 768px) {
+  .benefits__item:nth-child(3) {
+    margin-bottom: 0;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .benefits {
+    margin-right: 0;
+  }
+  .benefits__item:nth-child(3) {
+    margin-right: 30px;
+  }
+  .benefits__item:last-child {
+    margin-right: 0;
+  }
 }
 .benefits__title {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
   margin-bottom: 10px;
+  text-align: center;
+}
+@media screen and (min-width: 768px) {
+  .benefits__title {
+    text-align: left;
+  }
 }
 .benefits__description {
   font-size: 14px;
@@ -396,9 +500,14 @@ img {
   letter-spacing: 0.03em;
   color: #757575;
 }
-
 .work {
-  padding-bottom: 94px;
+  display: none;
+}
+@media screen and (min-width: 1200px) {
+  .work {
+    display: flex;
+    padding-bottom: 94px;
+  }
 }
 .work__title {
   font-weight: 700;
@@ -434,33 +543,84 @@ img {
   margin-right: 30px;
   position: relative;
 }
+@media screen and (min-width: 1200px) {
+  .work__item {
+    margin-right: 30px;
+    position: relative;
+  }
+}
 .work__item:last-child {
   margin-right: 0;
 }
 
 .team {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
   background-color: #f5f4fa;
+}
+@media screen and (min-width: 1200px) {
+  .team {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 .team__title {
   font-weight: 700;
-  font-size: 36px;
-  line-height: 1.16;
+  font-size: 28px;
+  line-height: 1.18;
   text-align: center;
   letter-spacing: 0.03em;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
 }
-.team__list {
-  display: flex;
+@media screen and (min-width: 1200px) {
+  .team__title {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.16;
+    text-align: center;
+    letter-spacing: 0.03em;
+    margin-bottom: 50px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .team__list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+  }
 }
 .team__item {
-  margin-right: 30px;
   background-color: #ffffff;
-  width: 270px;
+  flex-direction: column;
+  display: flex;
 }
-.team__item:last-child {
-  margin-right: 0;
+@media screen and (max-width: 767px) {
+  .team__item:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .team__item {
+    width: calc((100% - 30px) / 2);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .team__item {
+    width: calc((100% - 90px) / 4);
+  }
+}
+.team__photo {
+  width: 100%;
+}
+@media screen and (min-width: 768px) {
+  .team__photo {
+    width: 354px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .team__photo {
+    width: 270px;
+  }
 }
 .team__card {
   padding-top: 30px;
@@ -502,7 +662,7 @@ img {
   justify-content: center;
   padding: 12px;
   border-radius: 50%;
-  fill: #AFB1B8;
+  fill: #afb1b8;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social__link:hover, .social__link:focus {
@@ -514,40 +674,103 @@ img {
 }
 
 .clients {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
   text-align: center;
 }
-.clients__list {
-  display: flex;
-  justify-content: center;
+@media screen and (min-width: 768px) {
+  .clients {
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .clients {
+    padding-top: 94px;
+    padding-bottom: 94px;
+    text-align: center;
+  }
 }
 .clients__title {
   font-weight: 700;
-  font-size: 36px;
-  line-height: 42px;
+  font-size: 28px;
+  line-height: 1.18;
   text-align: center;
   letter-spacing: 0.03em;
   color: #212121;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
+}
+@media screen and (min-width: 1200px) {
+  .clients__title {
+    font-size: 36px;
+    line-height: 1.16;
+    margin-bottom: 50px;
+  }
+}
+.clients__list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 .clients__link {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 170px;
+  width: 100%;
   height: 92px;
-  border: 1px solid #AFB1B8;
+  border: 1px solid #afb1b8;
   border-radius: 4px;
-  fill: #AFB1B8;
+  fill: #afb1b8;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   cursor: pointer;
 }
 .clients__item {
-  margin-right: 30px;
+  width: calc((100% - 60px) / 2);
 }
-.clients__item:last-child {
-  margin-right: 0;
+.clients__item:not(:last-child) {
+  margin-bottom: 30px;
+}
+.clients__item:nth-child(5) {
+  margin-bottom: 0;
+}
+.clients__item:nth-child(2n) {
+  margin-left: 30px;
+}
+@media screen and (min-width: 768px) {
+  .clients__item {
+    width: calc((100% - 60px) / 3);
+    margin-right: 30px;
+  }
+  .clients__item:nth-child(2n) {
+    margin-left: 0;
+  }
+  .clients__item:nth-child(3n) {
+    margin-right: 0;
+  }
+  .clients__item:nth-child(3) {
+    margin-bottom: 0;
+  }
+  .clients__item:nth-child(4) {
+    margin-bottom: 0;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .clients__item {
+    width: calc((100% - 150px) / 6);
+    margin-bottom: 0;
+  }
+  .clients__item:nth-child(3) {
+    margin-right: 30px;
+  }
+  .clients__item:last-child {
+    margin-right: 0;
+  }
+  .clients__item:nth-child(1) {
+    margin-bottom: 0;
+  }
+  .clients__item:nth-child(2) {
+    margin-bottom: 0;
+  }
 }
 .clients__link:hover, .clients__link:focus {
   border-color: #2196f3;
@@ -564,8 +787,26 @@ footer {
   padding-bottom: 60px;
 }
 
-footer .container {
-  display: flex;
+@media screen and (min-width: 768px) {
+  footer .container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+}
+
+.footer-section {
+  text-align: center;
+}
+@media screen and (min-width: 768px) {
+  .footer-section {
+    text-align: center;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer-section {
+    text-align: left;
+  }
 }
 
 .logo__footer {
@@ -588,6 +829,18 @@ footer .container {
   margin-top: 9px;
   margin-bottom: 9px;
 }
+@media screen and (min-width: 768px) {
+  .footer-nav__mailto {
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer-nav__mailto {
+    text-align: left;
+  }
+}
 .footer-nav__mailto:last-child {
   margin-bottom: 0;
 }
@@ -605,9 +858,22 @@ footer .container {
   font-style: normal;
   color: #ffffff;
 }
-
 .socials {
-  margin-left: 70px;
+  text-align: center;
+  margin-top: 60px;
+}
+@media screen and (min-width: 768px) {
+  .socials {
+    text-align: center;
+    margin-left: 165px;
+    margin-top: 0;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .socials {
+    text-align: left;
+    margin-left: 70px;
+  }
 }
 .socials__title {
   font-weight: 700;
@@ -620,6 +886,8 @@ footer .container {
 }
 .socials__list {
   display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .socials__item {
   margin-right: 10px;
@@ -641,12 +909,21 @@ footer .container {
   background-color: #2196f3;
   fill: #ffffff;
 }
-
 .form {
-  margin-left: 93px;
+  text-align: center;
+  margin-top: 60px;
 }
-.form__block {
-  display: flex;
+@media screen and (min-width: 1200px) {
+  .form {
+    text-align: left;
+    margin-left: 93px;
+    margin-top: 0;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .form__block {
+    display: flex;
+  }
 }
 .form__title {
   font-weight: 700;
@@ -657,16 +934,45 @@ footer .container {
   color: #ffffff;
   margin-bottom: 20px;
 }
+@media screen and (min-width: 1200px) {
+  .form__title {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #ffffff;
+    margin-bottom: 20px;
+  }
+}
 .form__input {
   margin-right: 12px;
   padding-left: 16px;
-  width: 358px;
+  width: 100%;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
   background-color: #2f303a;
   color: #ffffff;
+}
+@media screen and (min-width: 768px) {
+  .form__input {
+    width: 450px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .form__input {
+    margin-right: 12px;
+    padding-left: 16px;
+    width: 358px;
+    height: 50px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+    background-color: #2f303a;
+    color: #ffffff;
+  }
 }
 .form__input:hover, .form__input:focus {
   border-color: #2196f3;
@@ -686,6 +992,28 @@ footer .container {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 20px;
+}
+@media screen and (min-width: 1200px) {
+  .form__button {
+    margin-top: 0;
+    width: 200px;
+    height: 50px;
+    background-color: #2196f3;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    border: none;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.87;
+    letter-spacing: 0.06em;
+    color: #ffffff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
 .form__send {
   width: 24px;
@@ -722,8 +1050,8 @@ footer .container {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
-  width: 528px;
-  height: 581px;
+  width: 450px;
+  height: 609px;
   background-color: #ffffff;
   transition: transform 250ms linear;
   padding: 40px;
@@ -731,16 +1059,27 @@ footer .container {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
 }
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+    height: 581px;
+  }
+}
 .modal__description {
   font-weight: 700;
   font-size: 20px;
-  line-height: 23px;
+  line-height: 1.5;
   text-align: center;
   letter-spacing: 0.03em;
   color: #212121;
   display: flex;
   align-items: center;
   justify-content: center;
+}
+@media screen and (min-width: 1200px) {
+  .modal__description {
+    line-height: 1.15;
+  }
 }
 .modal__form {
   display: flex;
@@ -815,14 +1154,28 @@ footer .container {
   justify-content: center;
   margin-bottom: 30px;
 }
+.modal__agreement__agreement span {
+  font-size: 12px;
+}
+@media screen and (min-width: 1200px) {
+  .modal__agreement__agreement span {
+    font-size: 14px;
+  }
+}
 .modal__label {
   display: flex;
   align-items: center;
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.16;
   letter-spacing: 0.03em;
   color: #757575;
   margin-right: 4px;
+}
+@media screen and (min-width: 1200px) {
+  .modal__label {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 }
 .modal__checkbox:checked + .modal__check {
   background-color: #2196f3;
@@ -834,6 +1187,12 @@ footer .container {
 .modal__text {
   text-decoration-line: underline;
   color: #2196f3;
+  font-size: 12px;
+}
+@media screen and (min-width: 1200px) {
+  .modal__text {
+    font-size: 14px;
+  }
 }
 .modal__check {
   display: flex;
@@ -852,7 +1211,7 @@ footer .container {
   display: block;
   margin-right: auto;
   margin-left: auto;
-  background-color: #188CE8;
+  background-color: #188ce8;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   border: none;
@@ -890,17 +1249,48 @@ footer .container {
 }
 
 .portfolio {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+@media screen and (min-width: 1200px) {
+  .portfolio {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
-.services {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 50px;
+@media screen and (min-width: 76px) {
+  .services {
+    display: flex;
+    flex-wrap: wrap;
+    row-gap: 15px;
+    margin-bottom: 30px;
+    -moz-column-gap: 8px;
+         column-gap: 8px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .services {
+    justify-content: center;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .services {
+    margin-bottom: 50px;
+  }
 }
 .services__item {
-  margin-right: 8px;
+  max-width: 450px;
+}
+@media screen and (min-width: 768px) {
+  .services__item {
+    max-width: 354px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .services__item {
+    max-width: 370px;
+  }
 }
 .services__item:last-child {
   margin-right: 0;
@@ -930,9 +1320,27 @@ footer .container {
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
+  justify-content: center;
+}
+@media screen and (min-width: 768px) {
+  .collage {
+    justify-content: space-between;
+  }
 }
 .collage__item {
-  max-width: 370px;
+  width: 100%;
+}
+@media screen and (min-width: 768px) {
+  .collage__item {
+    width: calc((100% - 30px) / 2);
+    max-width: 354px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .collage__item {
+    width: calc((100% - 60px) / 3);
+    max-width: 370px;
+  }
 }
 .collage__item:hover, .collage__item:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
@@ -943,6 +1351,14 @@ footer .container {
 .collage__wrap {
   position: relative;
   overflow: hidden;
+}
+.collage__photo {
+  width: 100%;
+}
+@media screen and (min-width: 768px) {
+  .collage__photo {
+    width: 100%;
+  }
 }
 .collage__text {
   position: absolute;
@@ -966,6 +1382,7 @@ footer .container {
   border-left: 1px solid #eeeeee;
   border-right: 1px solid #eeeeee;
   border-bottom: 1px solid #eeeeee;
+  flex-grow: 1;
 }
 .collage__title {
   font-weight: 700;
@@ -980,4 +1397,10 @@ footer .container {
   letter-spacing: 0.03em;
   margin-top: 4px;
   color: #757575;
+}
+
+.collage__link {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }/*# sourceMappingURL=main.css.map */
