--- a/sass/sections/_mob-menu.scss
+++ b/sass/sections/_mob-menu.scss
@@ -1,3 +1,4 @@
+
 .mob-menu {
   position: fixed;
   width: 100vw;
@@ -7,8 +8,8 @@
   z-index: 1;
   .container {
     position: relative;
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
     display: flex;
     flex-direction: column;
     justify-content: start;
