--- a/sass/sections/_hero.scss
+++ b/sass/sections/_hero.scss
@@ -1,73 +1,49 @@
 .hero {
   padding-top: 118px;
   padding-bottom: 118px;
-  background-image: linear-gradient(
-      rgba(47, 48, 58, 0.4),
-      rgba(47, 48, 58, 0.4)
-    ),
-    url(../img/mobile/hero-mobile@x1.webp);
+  // background-image: linear-gradient(
+  //     rgba(47, 48, 58, 0.4),
+  //     rgba(47, 48, 58, 0.4)
+  //   ),
+  //   url(../img/mobile/hero-mobile@x1.webp);
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)),url(../img/mobile/hero-mobile@x1.webp);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   text-align: center;
-  overflow: hidden;
-
   @media (min-device-pixel-ratio: 2),
   (min-resolution: 192dpi),
   (min-resolution: 2dppx) {
-    background-image: linear-gradient(
-      rgba(47, 48, 58, 0.4),
-      rgba(47, 48, 58, 0.4)
-    ),
-    url(../img/mobile/hero-mobile@x2.webp);
-  }
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)),url(../img/mobile/hero-mobile@x2.webp);
+}
+
 
 
  @media screen and (min-width: 768px){
-  background-image: linear-gradient(
-      rgba(47, 48, 58, 0.4),
-      rgba(47, 48, 58, 0.4)
-    ),
-    url(../img/tablet/hero-tablet@1x.webp);
-
-
-    @media (min-device-pixel-ratio: 2),
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)),url(../img/tablet/hero-tablet@1x.webp);
+  @media (min-device-pixel-ratio: 2),
   (min-resolution: 192dpi),
   (min-resolution: 2dppx) {
-    background-image: linear-gradient(
-      rgba(47, 48, 58, 0.4),
-      rgba(47, 48, 58, 0.4)
-    ),
-    url(../img/tablet/hero-tablet@2x.webp);
- }
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)),url(../img/tablet/hero-tablet@2x.webp);
+}
+
 }
 
   @media screen and (min-width:1200px) {
     padding-top: 200px;
     padding-bottom: 200px;
-
-    background-image: linear-gradient(
-      rgba(47, 48, 58, 0.4),
-      rgba(47, 48, 58, 0.4)
-    ),
-    url(../img/desktop/hero-desktop@1x.webp);
-
-
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)),url(../img/desktop/hero-desktop@1x.webp);
     @media (min-device-pixel-ratio: 2),
     (min-resolution: 192dpi),
     (min-resolution: 2dppx) {
-      background-image: linear-gradient(
-        rgba(47, 48, 58, 0.4),
-        rgba(47, 48, 58, 0.4)
-      ),
-      url(../img/desktop/hero-desktop@2x.webp);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)),url(../img/desktop/hero-desktop@2x.webp);
   }
   }
 
-  .container {
-    padding-top: 118px;
-    padding-bottom: 118px;
-  }
+  // .container {
+  //   padding-top: 118px;
+  //   padding-bottom: 118px;
+  // }
   &__title {
     font-weight: 900;
     font-size: 26px;
