--- a/sass/sections/_header.scss
+++ b/sass/sections/_header.scss
@@ -1,144 +1,199 @@
-
 .header .container {
   display: flex;
+  height: 80px;
   align-items: center;
-  outline: 1px solid red;
-  
+  justify-content: center;
+   
+
+  @media screen and (min-width: 768px) {
+    justify-content: space-between;
+  }
+
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    height: 80px;
+    align-items: center;
+    justify-content: center;
+  }
+
+  & .btn-open {
+    border: none;
+    background-color: $main-background-color;
+    fill: $body-text-color;
+    @media screen and (min-width: 768px) {
+      display: none;
+    }
+    &:hover svg {
+      fill: $hover-color;
+    }
+  }
 }
 
 .header {
-border-bottom: 1px solid #ECECEC;
-padding-top: 10px;
-padding-bottom: 10px;
-@media screen and (min-width:768px){
-  padding-top: 21px;
-  padding-bottom: 21px;
-}
-@media screen and (min-width:1200px){
-padding-top: 24px;
-padding-bottom: 25px;
+  border-bottom: 1px solid #ececec;
 }
 
-}
+.nav {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 
-.nav{
-  display: none;
-  @media screen and (min-width:768px){
+  @media screen and (min-width: 768px) {
+    display: flex;
+    width: auto;
+  }
+
+  @media screen and (min-width: 1200px) {
+  
+  }
+
+  &__button {
     display: block;
+   margin-left: auto;
+  
+    border: none;
+    background-color: $main-background-color;
+
+    @media screen and (min-width: 768px) {
+      display: none;
+    }
+
+    @media screen and (min-width: 1200px) {
+    }
   }
 
   &__list {
-  display: flex;
-  align-items: center;
-  gap: 50px;
-}
+    display: none;
+    align-items: center;
+    margin-left: 73px;
 
+    @media screen and (min-width: 768px) {
+      display: flex;
+    }
 
+    @media screen and (min-width: 1200px) {
+      margin-left: 93px;
+    }
+  }
 
-&__link {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  color: $body-text-color;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  position: relative;
-  cursor: pointer;
-}
+  &__item {
+    margin-right: 50px;
 
+    @media screen and (min-width: 768px) {
+      font-weight: 500;
+      font-size: 14px;
+      line-height: 1.14;
+      letter-spacing: 0.02em;
+      color: $body-text-color;
+    }
 
-&__link-active::after{
-  content:"";
-  position: absolute;
-  width: 100%;
-  height: 4px;
-  top: 45px;
-  left: 0;
-  background-color: $hover-color;
-  border-radius: 2px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+    @media screen and (min-width: 1200px) {
+    }
+  }
+  &__item:last-child {
+    margin-right: 0;
+  }
 
-}
+  &__link {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    color: $body-text-color;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    position: relative;
+    cursor: pointer;
+  }
 
-&__link:hover,
-&__link:focus  {
-        color: $hover-color;
-}
+  &__link-active::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 4px;
+    top: 45px;
+    left: 0;
+    background-color: $hover-color;
+    border-radius: 2px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 
+  &__link:hover,
+  &__link:focus {
+    color: $hover-color;
+  }
 }
 
 .logo {
+  display: block;
+  margin-right: auto;
   font-family: 'Raleway';
   font-weight: 700;
-  margin-right: 0;
-  font-size: 24px;
-  line-height: 1.19;
-  letter-spacing: 0.72;
-  color: #000000;
-  @media screen and (min-width:768px){
-  margin-right: 88px;
-  }
-  @media screen and (min-width:1200px){
   font-size: 26px;
-  letter-spacing: 0.78;
-  margin-right: 0;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
+  color: #000000;
+
+  &__color {
+    color: $hover-color;
   }
-
-     &__color {
-  color: $hover-color;
-  } 
-  
 }
-
 
 .contacts {
   display: none;
   align-items: center;
-  // margin-left: auto;
-  @media screen and (min-width:768px){
-  flex-direction: column;
-  display: flex;
-  gap: 10px;
+  margin-left: auto;
+
+  @media screen and (min-width: 768px) {
+    display: block;
+    margin-left: 73px;
   }
-  @media screen and (min-width:1200px){
-  flex-direction: row;
-  gap: 30px;
+
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    margin-left: auto;
   }
 
   &__icon {
-  margin-right: 10px;
-  fill: currentColor;
-}
+    margin-right: 10px;
+    fill: currentColor;
+  }
 
-  
   &__item {
-  display: flex;
-  align-items: center;
-}
+    display: flex;
+    align-items: center;
+  }
 
+  &__item:first-child {
+    @media screen and (min-width: 768px) {
+      margin-right: 0;
+      margin-bottom: 10px;
+    }
+
+    @media screen and (min-width: 1200px) {
+      margin-right: 50px;
+      margin-bottom: 0;
+    }
+  }
 
   &__link {
-  display: flex;
-  align-items: center;
-  color: $link-color;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
-}
+    display: flex;
+    align-items: center;
+    color: $link-color;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 
   &__link:hover,
   &__link:focus {
-  color: $hover-color;
-}
+    color: $hover-color;
+  }
 
   &__text {
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 1.14;
-  letter-spacing: 0.24px;
-  @media screen and (min-width:1200px){
-  font-size: 14px;
-  letter-spacing: 0.28px;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
   }
-}
 }
