--- a/style/main.css
+++ b/style/main.css
@@ -66,40 +66,93 @@ img {
 
 .header .container {
   display: flex;
+  height: 80px;
   align-items: center;
-  outline: 1px solid red;
-}
-
-.header {
-  border-bottom: 1px solid #ECECEC;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  justify-content: center;
 }
 @media screen and (min-width: 768px) {
-  .header {
-    padding-top: 21px;
-    padding-bottom: 21px;
+  .header .container {
+    justify-content: space-between;
   }
 }
 @media screen and (min-width: 1200px) {
-  .header {
-    padding-top: 24px;
-    padding-bottom: 25px;
+  .header .container {
+    display: flex;
+    height: 80px;
+    align-items: center;
+    justify-content: center;
   }
+}
+.header .container .btn-open {
+  border: none;
+  background-color: #ffffff;
+  fill: #212121;
+}
+@media screen and (min-width: 768px) {
+  .header .container .btn-open {
+    display: none;
+  }
+}
+.header .container .btn-open:hover svg {
+  fill: #2196f3;
+}
+
+.header {
+  border-bottom: 1px solid #ececec;
 }
 
 .nav {
-  display: none;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 @media screen and (min-width: 768px) {
   .nav {
-    display: block;
+    display: flex;
+    width: auto;
+  }
+}
+.nav__button {
+  display: block;
+  margin-left: auto;
+  border: none;
+  background-color: #ffffff;
+}
+@media screen and (min-width: 768px) {
+  .nav__button {
+    display: none;
   }
 }
 .nav__list {
-  display: flex;
+  display: none;
   align-items: center;
-  gap: 50px;
+  margin-left: 73px;
+}
+@media screen and (min-width: 768px) {
+  .nav__list {
+    display: flex;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .nav__list {
+    margin-left: 93px;
+  }
+}
+.nav__item {
+  margin-right: 50px;
+}
+@media screen and (min-width: 768px) {
+  .nav__item {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    color: #212121;
+  }
+}
+.nav__item:last-child {
+  margin-right: 0;
 }
 .nav__link {
   font-weight: 500;
@@ -129,25 +182,14 @@ img {
 }
 
 .logo {
+  display: block;
+  margin-right: auto;
   font-family: "Raleway";
   font-weight: 700;
-  margin-right: 0;
-  font-size: 24px;
+  font-size: 26px;
   line-height: 1.19;
-  letter-spacing: 0.72;
+  letter-spacing: 0.03em;
   color: #000000;
-}
-@media screen and (min-width: 768px) {
-  .logo {
-    margin-right: 88px;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .logo {
-    font-size: 26px;
-    letter-spacing: 0.78;
-    margin-right: 0;
-  }
 }
 .logo__color {
   color: #2196f3;
@@ -156,18 +198,18 @@ img {
 .contacts {
   display: none;
   align-items: center;
+  margin-left: auto;
 }
 @media screen and (min-width: 768px) {
   .contacts {
-    flex-direction: column;
-    display: flex;
-    gap: 10px;
+    display: block;
+    margin-left: 73px;
   }
 }
 @media screen and (min-width: 1200px) {
   .contacts {
-    flex-direction: row;
-    gap: 30px;
+    display: flex;
+    margin-left: auto;
   }
 }
 .contacts__icon {
@@ -177,6 +219,18 @@ img {
 .contacts__item {
   display: flex;
   align-items: center;
+}
+@media screen and (min-width: 768px) {
+  .contacts__item:first-child {
+    margin-right: 0;
+    margin-bottom: 10px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .contacts__item:first-child {
+    margin-right: 50px;
+    margin-bottom: 0;
+  }
 }
 .contacts__link {
   display: flex;
@@ -189,15 +243,9 @@ img {
 }
 .contacts__text {
   font-weight: 500;
-  font-size: 12px;
+  font-size: 14px;
   line-height: 1.14;
-  letter-spacing: 0.24px;
-}
-@media screen and (min-width: 1200px) {
-  .contacts__text {
-    font-size: 14px;
-    letter-spacing: 0.28px;
-  }
+  letter-spacing: 0.02em;
 }
 
 .mob-menu {
